@@ -1,3 +1,13 @@
+2004-06-27  Tomas Ebenlendr  <ebik@ucw.cz>
+
+	* fs/ext2.c (FILETYPE_INO_MASK, FILETYPE_INO_DIRECTORY)
+	(FILETYPE_INO_SYMLINK): New macros.
+	(grub_ext2_find_file): Check if the node is a directory using the
+	inode stat information instead of using the filetype in the
+	dirent.  Exclude the first character of an absolute symlink.
+	(grub_ext2_dir): Mask out the filetype part of the mode member of
+	the inode.
+
 2004-05-24  Marco Gerards  <metgerards@student.han.nl>
 
 	Add support for UFS version 1 and 2.  Add support for the minix
